--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -15,15 +15,16 @@ menu:
   archives:
     url: /archives
   tags:
+    text: 标签
     url: /tags
   th-list:
-    text: Categories
+    text: 分类
     url: /categories
   github:
-    url: https://github.com/yscoder
+    url: https://github.com/fanjinbo
     target: _blank
   weibo:
-    url: http://www.weibo.com/ysweb
+    url: http://www.weibo.com/1615562162
     target: _blank
   link:
     text: 测试
@@ -37,15 +38,15 @@ avatar: //placekitten.com/200/200
 favicon: /favicon.ico
 
 # email
-email: 634206017@qq.com
+email: fanjinbo1991@gmail.com
 
 # 设置 Android L Chrome 浏览器状态栏颜色
 color: '#3F51B5'
 
 # 页面标题
-tags_title: Tags
-archives_title: Archives
-categories_title: Categories
+tags_title: 标签
+archives_title: 归档
+categories_title: 分类
 
 # 文章截断
 excerpt_render: false
@@ -58,10 +59,10 @@ archive_yearly: true
 share: true
 
 #是否开启打赏，关闭 reward: false
-reward:
-  title: 谢谢大爷~
-  wechat: /img/wechat.jpg     #微信，关闭设为 false
-  alipay: /img/alipay.jpg     #支付宝，关闭设为 false
+#reward:
+#  title: 谢谢大爷~
+#  wechat: /img/wechat.jpg     #微信，关闭设为 false
+#  alipay: /img/alipay.jpg     #支付宝，关闭设为 false
 
 #是否开启搜索
 search: true
@@ -80,6 +81,9 @@ copyright: 这里写留言或版权声明：<a href="<%- url_for(page.path).repl
 #站长统计，如要开启，输入CNZZ站点id，如 cnzz: 1255152447
 cnzz: false
 
+## Analytics
+cnzz_tongji: true
+
 # Miscellaneous
 google_analytics: false
 google_site_verification: false
@@ -91,7 +95,7 @@ less:
     - source/css/style.less
 
 # 是否开启多说评论，填写你在多说创建的站点二级域名
-duoshuo: ysblog
+duoshuo: fanjinbo
 # 使用 disqus 时关闭多说评论
 disqus_shortname: false
 
@@ -102,7 +106,7 @@ disqus_shortname: false
 canonical: false
 
 # 版权起始年份
-since_year: 2006
+since_year: 2016
 
 # 用户页面中作者相关的描述性文字，如不需要设为 false
 about: 用户页面中作者相关的描述性文字，如不需要设为 false
