--- a/themes/indigo/_config.yml
+++ b/themes/indigo/_config.yml
@@ -13,6 +13,7 @@ menu:
     text: 主页
     url: /
   archives:
+    text: 归档
     url: /archives
   tags:
     text: 标签
@@ -24,18 +25,19 @@ menu:
     url: https://github.com/fanjinbo
     target: _blank
   weibo:
+    text: 新浪微博
     url: http://www.weibo.com/1615562162
     target: _blank
-  link:
-    text: 测试
-    url: /custom
+#  link:
+#    text: 测试
+#    url: /custom
 
 rss: /atom.xml
 
 #你的头像url
-avatar: //placekitten.com/200/200
+avatar: /img/tx.png
 #favicon
-favicon: /favicon.ico
+favicon: /img/tx.png
 
 # email
 email: fanjinbo1991@gmail.com
@@ -68,7 +70,7 @@ share: true
 search: true
 
 #是否大屏幕下文章页隐藏导航
-hideMenu: true
+hideMenu: false
 
 #是否开启toc
 #toc: false
@@ -109,4 +111,4 @@ canonical: false
 since_year: 2016
 
 # 用户页面中作者相关的描述性文字，如不需要设为 false
-about: 用户页面中作者相关的描述性文字，如不需要设为 false
+about: false
